react-app/src/components/auth/SignUpForm.css
.sign-up-page{
    position:fixed;
    display: flex;
    left: 50%;
    transform: translateX(-50%);
    top: 20%;
    flex-direction: column;
    width: 50%;
    max-width: 500px;
    min-width: 250px;
    justify-items: center;
    border-radius: 5px;
    box-shadow: 0px 0px 3px lightcyan;
    padding: 10px;
    background-color: rgb(75, 75, 75);
}

.input-box-title{
    text-align: center;
}

.sign-up-page input{
    height: 30px;
    border-radius: 5px;
    width: 100%;
    margin: auto;
    padding: 5px;
    font-size: larger;
}

.sign-up-page div{
    margin-left: 3%;
    width: 90%;
}



.sign-up-button{
    width: 33%;
    min-height: 30px;
    margin-left: auto;
    margin-right: auto;
    margin-top: 10px;
    border-radius: 5px;
    font-size: large;
}

@media only screen and (max-width: 740px){
    .sign-up-page{
        top: 30%;
    }
}

